changes to stock app to fix bleeding off card

--- a/stock/css/custom.css
+++ b/stock/css/custom.css
@@ -785,3 +785,7 @@ body {
 .red h6 {
   color: #dd4b39;
 }
+
+.btn-buysell{
+  padding: 15px 0px!important;
+}
